fix: improve UX of <object> on mobile.
Increase height of listed items in Inherits / Inherited by to 48px.

--- a/src/app/pages/object/object.component.scss
+++ b/src/app/pages/object/object.component.scss
@@ -63,6 +63,10 @@
       font-size: 18px;
       margin-right: 12px;
     }
+
+    @media (max-width: 1025px) {
+      min-height: 48px;
+    }
   }
 }
 
